--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/04-transfer-learning/02_batch_normalization.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/04-transfer-learning/02_batch_normalization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPonMRJ8cDCPc7ri/Mgyxed",
+      "authorship_tag": "ABX9TyOxe8xhc5CfqDz0/9QDv0Hk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
           "height": 17
         },
         "id": "sJOR-0hwlwr7",
-        "outputId": "bfe11271-c30d-4c8a-e2fb-9f8b3ebe7304"
+        "outputId": "7988386e-aeee-4b1c-a6c9-5a4d8acc173b"
       },
       "execution_count": 1,
       "outputs": [
@@ -116,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "a3ad0e18-dff1-4b6e-ebad-e282386e92b5"
+        "outputId": "b275876f-241a-4b79-e141-d527d17d30e7"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,168 +157,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "metadata": {
-        "id": "0A-YvvDpDl-1",
-        "outputId": "debf8027-abdc-451a-ac13-40761de3c8b6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "# content/gdrive/My Drive/Kaggle is the path where kaggle.json is  present in the Google Drive\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/MyDrive/kaggle-keys\""
-      ],
-      "metadata": {
-        "id": "iDxyNz9iEDxw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%shell\n",
-        "\n",
-        "# download dataset from kaggle> URL: https://www.kaggle.com/datasets/sanikamal/rock-paper-scissors-dataset\n",
-        "kaggle datasets download -d sanikamal/rock-paper-scissors-dataset\n",
-        "\n",
-        "unzip -qq rock-paper-scissors-dataset.zip\n",
-        "rm -rf rock-paper-scissors-dataset.zip"
-      ],
-      "metadata": {
-        "id": "imNthwCGdJTw",
-        "outputId": "09b26262-23bf-4974-fb26-afab6b5d6495",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading rock-paper-scissors-dataset.zip to /content\n",
-            " 99% 449M/452M [00:04<00:00, 122MB/s]\n",
-            "100% 452M/452M [00:04<00:00, 98.1MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Data Preparation"
-      ],
-      "metadata": {
-        "id": "Z9Sqyzlxl-Wn"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The data preparation step will be a bit more demanding this time since we’ll be\n",
-        "standardizing the images.Besides, we can use the ImageFolder dataset now.\n",
-        "\n",
-        "The Rock Paper Scissors dataset is organized like that:\n",
-        "\n",
-        "```\n",
-        "rps/paper/paper01-000.png\n",
-        "rps/paper/paper01-001.png\n",
-        "\n",
-        "rps/rock/rock01-000.png\n",
-        "rps/rock/rock01-001.png\n",
-        "\n",
-        "rps/scissors/scissors01-000.png\n",
-        "rps/scissors/scissors01-001.png\n",
-        "```\n",
-        "\n",
-        "The dataset is also perfectly balanced, with each sub-folder containing 840 images\n",
-        "of its particular class."
-      ],
-      "metadata": {
-        "id": "NMt6wXGPl_on"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "ROOT_FOLDER = \"Rock-Paper-Scissors\""
-      ],
-      "metadata": {
-        "id": "-04BquM1nbe4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Since we’re using a pre-trained model, we need to use the standardization\n",
-        "parameters used to train the original model. \n",
-        "\n",
-        "In other words, we need to use the\n",
-        "statistics of the original dataset used to train that model.\n",
-        "\n",
-        "So, the data preparation step for the Rock Paper Scissors dataset looks like this now:"
-      ],
-      "metadata": {
-        "id": "Zl4V53YwsCxk"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "normalizer = Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-        "composer = Compose([\n",
-        "  Resize(256),\n",
-        "  CenterCrop(224),\n",
-        "  ToTensor(),\n",
-        "  normalizer\n",
-        "])\n",
-        "\n",
-        "train_data = ImageFolder(root=f\"{ROOT_FOLDER}/train\", transform=composer)\n",
-        "val_data = ImageFolder(root=f\"{ROOT_FOLDER}/test\", transform=composer)\n",
-        "\n",
-        "# Builds a loader of each set\n",
-        "train_loader = DataLoader(train_data, batch_size=16, shuffle=True)\n",
-        "val_loader = DataLoader(val_data, batch_size=16)"
-      ],
-      "metadata": {
-        "id": "QW0r77mzsKad"
-      },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -432,7 +271,7 @@
       "metadata": {
         "id": "6iFvwjFU4r73"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -460,7 +299,7 @@
       "metadata": {
         "id": "2P038cwL-sSg"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -495,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-KVs-TAMBEzC",
-        "outputId": "83ca46fb-cf7d-47e1-a8ef-3eca1c461adb"
+        "outputId": "c59c08dd-19d0-42e9-b88d-db07e8ae155b"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +346,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -522,9 +361,9 @@
           "height": 292
         },
         "id": "nbawQvcaBYG3",
-        "outputId": "6f911fda-66ae-4a8a-b976-5f30ebffc21d"
+        "outputId": "45c3dc3f-d2e2-48b9-b853-9025d47a7f1d"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -556,12 +395,12 @@
       ],
       "metadata": {
         "id": "G8cn_ZlIRdAU",
-        "outputId": "8eba802a-a4d6-410b-b168-d3d9095673fb",
+        "outputId": "2c4bcc83-7c08-42e0-dced-1e744f6bbd19",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
@@ -595,12 +434,12 @@
       ],
       "metadata": {
         "id": "jFwMS8eGhbdg",
-        "outputId": "286b792f-eb1c-4d07-c924-0d742ad33eb1",
+        "outputId": "4c7c5ec4-0080-4cb1-d510-f124fcdd3d37",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -612,7 +451,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -632,12 +471,12 @@
       ],
       "metadata": {
         "id": "yombOuXsioSi",
-        "outputId": "fc916060-76a6-4a1d-a5ad-97f07a151ccd",
+        "outputId": "f7517ccb-205d-460b-f090-ee627780c21e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +486,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -682,7 +521,7 @@
       ],
       "metadata": {
         "id": "cvGXkXHujaJ8",
-        "outputId": "da1fac7f-c5e8-4cdd-87d6-36ddf6de9139",
+        "outputId": "272b6e12-03a9-4199-8073-f6d2a6fa2dc1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -708,7 +547,7 @@
       ],
       "metadata": {
         "id": "pBtNdt3mji0Z",
-        "outputId": "4d0d4b26-aae2-4f0c-87a9-402f0423216d",
+        "outputId": "84f01278-72f8-487b-8073-39a28639b581",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
@@ -752,7 +591,7 @@
       ],
       "metadata": {
         "id": "i_gns2NCj1XR",
-        "outputId": "70e1c8ce-f7b7-43f0-e840-b6f66b87fbd8",
+        "outputId": "4f50e3ac-be7d-41d2-e91b-ca69b45782c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -792,7 +631,7 @@
       ],
       "metadata": {
         "id": "LeSZDaoKkAqU",
-        "outputId": "05fa3cc3-53da-4096-c36b-e732f29fc2ef",
+        "outputId": "1a89ef51-c373-4fe6-e29c-08aacc06cb5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -845,7 +684,7 @@
       ],
       "metadata": {
         "id": "IxxVdtGdk-Y8",
-        "outputId": "72e55146-455f-4e11-fed6-6e0e1b30ccb0",
+        "outputId": "790fe3b5-6a48-4c1c-e030-022702e6358b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -888,9 +727,291 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "There is an alternative way of computing running statistics: Instead of using a\n",
+        "simple average, it uses an exponentially weighted moving average (EWMA) of the\n",
+        "statistics.\n",
+        "\n",
+        "So, to make it abundantly clear what is being computed, I present the formulas\n",
+        "below:\n",
+        "\n",
+        "$$\n",
+        "\\large\n",
+        "\\begin{array}\n",
+        "& \\text{EWMA}_t(\\alpha, x) &= &\\alpha &x_t &+ &(1-\\alpha) &\\text{EWMA}_{t-1}(\\alpha, x)\n",
+        "\\\\\n",
+        "\\text{running stat}_t &= &\\text{\"momentum\"} &\\text{stat}_t &+ &(1-\\text{\"momentum\"}) &\\text{running stat}_{t-1}\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "Let’s try it out in practice."
+      ],
       "metadata": {
         "id": "hkFnp2LzlheF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_normalizer_mom = nn.BatchNorm1d(num_features=2, affine=False, momentum=0.1)\n",
+        "batch_normalizer_mom.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1e271q5zr1ka",
+        "outputId": "66833394-30ac-4d92-e14e-3c0e36a6c78a"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('running_mean', tensor([0., 0.])),\n",
+              "             ('running_var', tensor([1., 1.])),\n",
+              "             ('num_batches_tracked', tensor(0))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What happens if we run\n",
+        "the first mini-batch through it?"
+      ],
+      "metadata": {
+        "id": "fmPVeb6jsJ0M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normed1_mom = batch_normalizer_mom(batch1[0])\n",
+        "batch_normalizer_mom.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "624n7gClsKRX",
+        "outputId": "e695a19c-e612-4e84-d212-e54855f85a7a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('running_mean', tensor([-0.0228, -0.0212])),\n",
+              "             ('running_var', tensor([1.2743, 1.3761])),\n",
+              "             ('num_batches_tracked', tensor(1))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can easily verify the results for the running\n",
+        "means:"
+      ],
+      "metadata": {
+        "id": "O9o1y5O0sZ-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "running_mean = torch.zeros((1, 2))\n",
+        "running_mean = 0.1 * batch1[0].mean(axis=0) + (1 - 0.1) + running_mean\n",
+        "running_mean"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UXcKXfyPsad1",
+        "outputId": "dc98d524-63bf-4121-d815-f85a938b7cc1"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8772, 0.8788]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###BatchNorm2d"
+      ],
+      "metadata": {
+        "id": "M9iE__Met6Rh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The difference between the one-dimension and the two-dimension batch\n",
+        "normalization is actually quite simple: The former standardizes features (columns),\n",
+        "while the latter standardizes channels (pixels).\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vcTACO-mt7c8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(39)\n",
+        "\n",
+        "dummy_images = torch.rand((200, 3, 10, 10))\n",
+        "dummy_labels = torch.randint(2, (200, 1))\n",
+        "\n",
+        "dummy_dataset = TensorDataset(dummy_images, dummy_labels)\n",
+        "dummy_loader = DataLoader(dummy_dataset, batch_size=64, shuffle=True)\n",
+        "\n",
+        "iterator = iter(dummy_loader)\n",
+        "batch1 = next(iterator)\n",
+        "batch1[0].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yG7pYdSRuuUF",
+        "outputId": "3277f6cf-b602-44df-d16d-7e645c79f347"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([64, 3, 10, 10])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The batch normalization is done over the C dimension, so it will compute statistics\n",
+        "using the remaining dimensions—N, H, and `W (axis=[0, 2, 3])`—representing all\n",
+        "pixels of a given channel from every image in the mini-batch.\n",
+        "\n",
+        "The `nn.BatchNorm2d` layer has the same arguments as its one-dimension\n",
+        "counterpart, but its num_features argument must match the number of channels\n",
+        "of the input instead:"
+      ],
+      "metadata": {
+        "id": "udWxD4Qpv3nh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_normalizer = nn.BatchNorm2d(num_features=3, affine=False, momentum=None)\n",
+        "normed1 = batch_normalizer(batch1[0])\n",
+        "normed1.mean(axis=[0, 2, 3]), normed1.var(axis=[0, 2, 3], unbiased=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cynZAsK0wB0W",
+        "outputId": "a5dfb13f-af88-4435-b761-814a839d3870"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([ 2.3283e-08, -2.3693e-08,  8.8960e-08]),\n",
+              " tensor([0.9999, 0.9999, 0.9999]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As expected, each channel in the output has its pixel values with zero mean and\n",
+        "unit standard deviation."
+      ],
+      "metadata": {
+        "id": "MWrfmpoNwyUz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Summary"
+      ],
+      "metadata": {
+        "id": "1s-HUgD1x6w0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It goes over a lot\n",
+        "of information while only scratching the surface of this topic. So, I am organizing a\n",
+        "small summary of the main points we’ve addressed:\n",
+        "\n",
+        "* During training time, batch normalization computes statistics (mean and\n",
+        "variance) for each individual mini-batch and uses these statistics to produce\n",
+        "standardized outputs.\n",
+        "\n",
+        "* The fluctuations in the statistics from one mini-batch to the next introduce\n",
+        "randomness into the process and thus have a regularizing effect.\n",
+        "\n",
+        "* Due to the regularizing effect of batch normalization, it may not work well if combined with other regularization techniques (like dropout).\n",
+        "\n",
+        "* During evaluation time, batch normalization uses a (smoothed) average of the\n",
+        "statistics computed during training.\n",
+        "\n",
+        "* Its original motivation was to address the so-called internal covariate shift by\n",
+        "producing similar distributions across different layers, but it was later found\n",
+        "that it actually improves model training by making the loss surface smoother.\n",
+        "\n",
+        "* The batch normalization may be placed either before or after the activation\n",
+        "function; there is no \"right\" or \"wrong\" way.\n",
+        "\n",
+        "* The layer preceding the batch normalization layer should have its bias=False\n",
+        "set to avoid useless computation.\n",
+        "\n",
+        "* Even though batch normalization works for a different reason than initially\n",
+        "thought, addressing the internal covariate shift may still bring benefits, like\n",
+        "solving the vanishing gradients problem.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "s0yBu6Hix7tc"
       }
     }
   ]
