--- a/inside-deep-learing/12-rnn-alternatives/01_torchtext_basic.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/01_torchtext_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNRLADRrqb0QIgLCEBzYbgH",
+      "authorship_tag": "ABX9TyOcu+SbOWDtDxMfKvBuwbrC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Sequence-tosequence"
+        "##Torch text basic"
       ],
       "metadata": {
         "id": "ldjKkwDE9r9p"
@@ -80,6 +80,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install portalocker"
+      ],
+      "metadata": {
+        "id": "q7I44z5XHnZa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!wget https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py"
       ],
       "metadata": {
@@ -98,10 +109,17 @@
         "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence\n",
         "from torchvision import transforms\n",
         "\n",
+        "import torchtext\n",
+        "from torchtext.data.utils import get_tokenizer\n",
+        "from torchtext.vocab import vocab\n",
+        "\n",
+        "from torchtext.datasets import AG_NEWS\n",
+        "\n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "\n",
         "from tqdm.autonotebook import tqdm\n",
         "\n",
+        "from collections import Counter\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
@@ -123,7 +141,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -151,7 +169,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,33 +180,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def plot_heatmap(src, trg, scores):\n",
-        "  fig, ax = plt.subplots()\n",
-        "  heatmap = ax.pcolor(scores, cmap='gray')\n",
-        "\n",
-        "  ax.set_xticklabels(trg, minor=False, rotation='vertical')\n",
-        "  ax.set_yticklabels(src, minor=False)\n",
-        "\n",
-        "  # put the major ticks at the middle of each cell\n",
-        "  # and the x-ticks on top\n",
-        "  ax.xaxis.tick_top()\n",
-        "  ax.set_xticks(np.arange(scores.shape[1]) + 0.5, minor=False)\n",
-        "  ax.set_yticks(np.arange(scores.shape[0]) + 0.5, minor=False)\n",
-        "  ax.invert_yaxis()\n",
-        "\n",
-        "  plt.colorbar(heatmap)\n",
-        "  plt.show()"
-      ],
-      "metadata": {
-        "id": "nAYIGNlZdRFL"
-      },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -200,13 +192,13 @@
       "metadata": {
         "id": "Bbs8SwBuguUa"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##English-French dataset"
+        "##AG News dataset"
       ],
       "metadata": {
         "id": "ycbbAdR0fjAG"
@@ -215,52 +207,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# let’s quickly load small English-French dataset\n",
-        "all_data = []\n",
-        "response = urlopen(\"https://download.pytorch.org/tutorial/data.zip\")\n",
-        "zipfile = ZipFile(BytesIO(response.read()))\n",
+        "# let’s quickly load AG_NEWS dataset\n",
+        "train_iter, test_iter = AG_NEWS(root=\"./data\", split=(\"train\", \"test\"))\n",
         "\n",
-        "for line in zipfile.open(\"data/eng-fra.txt\").readlines():\n",
-        "  line = line.decode(\"utf-8\").lower()   # lower case only please\n",
-        "  line = re.sub(r\"[-.!?]+\", r\" \", line) # no puntuation\n",
-        "  source_lang, target_lang = line.split(\"\\t\")[0: 2]\n",
-        "  all_data.append((source_lang.strip(), target_lang.strip())) # (english, french)"
+        "train_dataset = list(train_iter)\n",
+        "test_dataset = list(test_iter)"
       ],
       "metadata": {
         "id": "_chm5G2Z3Eqs"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "for i in range(10):\n",
-        "  print(all_data[i])"
+        "print(train_dataset[0])"
       ],
       "metadata": {
         "id": "NymODd7xqoW7",
-        "outputId": "ec901d10-a556-435a-b91f-e01c284952c5",
+        "outputId": "410be762-6591-41e4-d95a-edf58c7ab8a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('go', 'va')\n",
-            "('run', 'cours')\n",
-            "('run', 'courez')\n",
-            "('wow', 'ça alors')\n",
-            "('fire', 'au feu')\n",
-            "('help', \"à l'aide\")\n",
-            "('jump', 'saute')\n",
-            "('stop', 'ça suffit')\n",
-            "('stop', 'stop')\n",
-            "('stop', 'arrête toi')\n"
+            "(3, \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\")\n"
           ]
         }
       ]
@@ -268,37 +245,34 @@
     {
       "cell_type": "code",
       "source": [
-        "all_data[:10]"
+        "# tokenizers break strings like \"this is a string\" into lists of tokens like ['this', 'is', 'a', 'string']\n",
+        "tokenizer = get_tokenizer(\"basic_english\") # we will be fine with the default english style tokenizer\n",
+        "\n",
+        "# we need to create a vocabulary of all the words in the training set\n",
+        "counter = Counter()\n",
+        "for (label, line) in train_dataset:\n",
+        "  # count the number of unique tokens we see and how often we see them (e.g., we will see \"the\" a lot, but \"sasquatch\" maybe once or not at all.)\n",
+        "  counter.update(tokenizer(line))\n",
+        "# create a vocab object, removing any word that didn't occur at least 10 times, \n",
+        "# and add special vocab items for unkown, begining of sentance, end of sentance, and \"padding\"\n",
+        "vocab = vocab(counter, min_freq=10, specials=(\"<unk>\", \"<BOS>\", \"<EOS>\", \"<PAD>\"))"
       ],
       "metadata": {
-        "id": "e-hdDWUGq9tb",
-        "outputId": "e6dc2fa2-2e4b-4239-8e27-3a499f4ecb2d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "e-hdDWUGq9tb"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[('go', 'va'),\n",
-              " ('run', 'cours'),\n",
-              " ('run', 'courez'),\n",
-              " ('wow', 'ça alors'),\n",
-              " ('fire', 'au feu'),\n",
-              " ('help', \"à l'aide\"),\n",
-              " ('jump', 'saute'),\n",
-              " ('stop', 'ça suffit'),\n",
-              " ('stop', 'stop'),\n",
-              " ('stop', 'arrête toi')]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Vocab?"
+      ],
+      "metadata": {
+        "id": "NoeUZqd6QRjr"
+      },
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "code",
